Fixed padding alignment.

--- a/src/FunnelWeb.Web/Themes/Clean/Content/Styles/Theme.css
+++ b/src/FunnelWeb.Web/Themes/Clean/Content/Styles/Theme.css
@@ -83,7 +83,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
 	font-weight: normal;
 	font-size: 12pt;
 	width: auto;
-    padding: 10px 40px 20px 40px;
+    padding: 10px 40px 10px 40px;
     -moz-border-radius: 7px 7px 0px 0px;
     -webkit-border-radius: 7px 7px 0px 0px;
     border-radius: 7px 7px 0px 0px;
